--- a/freeCodeCamp-surveyForm/survey.html
+++ b/freeCodeCamp-surveyForm/survey.html
@@ -1,4 +1,4 @@
-<!-DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <meta charset="utf-8">
 <head>
@@ -27,9 +27,9 @@
     </select>
     </fieldset>
       <legend>Would you recommend freeCodeCamp to a friend?</legend>
-      <label for="recommend"><input id="recommend" type="radio" name="name"> Definitely</label>
-      <label for="maybe"><input id="maybe" type="radio" name="name"> Maybe</label>
-      <label for="notsure"><input id="notsure" type="radio" name="name"> Not sure</label>
+      <label for="recommend"><input id="recommend" type="radio" name="name" value="definitely"> Definitely</label>
+      <label for="maybe"><input id="maybe" type="radio" name="name" value="maybe"> Maybe</label>
+      <label for="notsure"><input id="notsure" type="radio" name="name" value="notsure"> Not sure</label>
     </fieldset>
     <fieldset>
       <legend>What is your favorite feature of freeCodeCamp?</legend>
@@ -44,10 +44,10 @@
     <fieldset>
       <legend>What would you like to see improved? (check all that apply))</legend>
       <label><input type="checkbox" value="front"> Front-end Projects</label>
-      <label><input type="checkbox" value="Back-end Projects"> Back-end Projects</label>
-      <label><input type="checkbox" value="Data Visualization"> Data Visualization</label>
+      <label><input type="checkbox" value="Back-end-Projects"> Back-end Projects</label>
+      <label><input type="checkbox" value="Data-Visualization"> Data Visualization</label>
       <label><input type="checkbox" value="Challenges"> Challenges</label>
-      <label><input type="checkbox" value="Open Source Community"> Open Source Community</label>
+      <label><input type="checkbox" value="Open-Source-Community"> Open Source Community</label>
       <label><input type="checkbox" value="Gitter"> Gitter help rooms</label>
       <label><input type="checkbox" value="video"> Vídeos</label>
       <label><input type="checkbox" value="city"> City Meetups</label>
